Remove unnecessary methods